<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="24dp">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mode_select_title"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/button_pvp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/mode_pvp"
        android:textSize="18sp" />

    <Button
        android:id="@+id/button_pvc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/mode_pvc"
        android:textSize="18sp" />

    <!-- Nuevo botón para volver al menú de juegos -->
    <Button
        android:id="@+id/button_back_menu"
        android:layout_width="211dp"
        android:layout_height="70dp"
        android:text="@string/back_to_menu"
        android:textSize="18sp" />

</LinearLayout>
